# Tucil2_13523002

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
include/: gif.h
src/: main.cpp
src/cli/: cli.cpp  cli.h
src/controller/: compressiom_controller.cpp  compression_controller.h
src/error_measurement/: emm_entropy.h  emm_mad.h  emm_mpd.h  emm_ssim.h  emm_variance.h  error_method.h
src/image/: image.cpp  image.h  image_sequence.cpp  image_sequence.h
src/quadtree/: quadtreeimage.cpp  quadtreeimage.h  quadtreenode.cpp  quadtreenode.h
src/utils/: debug.h  style.h
